增加文档, 更新接口中

--- a/livecode/config.json
+++ b/livecode/config.json
@@ -7,7 +7,9 @@
     },
     "mongodb": {
         "host": "127.0.0.1",
-        "port": 27017
-    }
+        "port": 27017,
+        "dbname": "live_code"
+    },
+    "host": "http://192.168.1.111:8080"
 }
 
